# job-embedding-experiment

./: .gitignore  README.md  config.yaml  job-roles.md  pyproject.toml
.beads/: issues.jsonl
.work/curated-target-library-evaluation/: futures.md  state.json
.work/curated-target-library-evaluation/plan/: handoff-prompt.md
.work/curated-target-library-evaluation/review/: findings.jsonl
.work/curated-target-library-evaluation/specs/: architecture.md
.work/job-title-embedding-experiment/: archive-summary.md  state.json
.work/job-title-embedding-experiment/specs/: index.md  (+8 more)
.work/job-title-embedding-futures/: futures.md  state.json
data/taxonomy/: augmented_targets.json  clusters.json  curated_roles.json  descriptions.json  roles.json  target_sets.json
data/test-cases/: dev.json  manual.json  raw_cases.json  test.json
docs/feature/: curated-target-library-evaluation.md  job-title-embedding-experiment.md  job-title-embedding-futures.md
docs/futures/: job-title-embedding-experiment.md
scripts/: prep_taxonomy.py  prep_test_data.py  run_experiment.py
src/: augment.py  baselines.py  bgem3.py  clusters.py  curated_targets.py  descriptions.py  embed.py  evaluate.py  fine_tune.py  fusion.py  generate_llm.py  generate_rules.py  generate_training_data.py  preprocess.py  report.py  rerank.py  statistics.py  targets.py  taxonomy.py  utils.py  validate.py
tests/: test_augment.py  test_bgem3.py  test_embed.py  test_evaluate.py  test_fine_tune.py  test_fusion.py  test_generate_training_data.py  test_preprocess.py  test_rerank.py  test_taxonomy.py  test_validate.py
(+49 files in other folders)
